# Auto-Trading

./: .env.example  .gitignore  README.md  pyproject.toml
config/: symbols.csv
config/launchd/: com.gostop.dashboard.plist  com.gostop.market-runner.plist
docs/: data_collection_plan.md  trading_strategy_research.md
scripts/: run_dashboard.sh  run_market_runner.sh
src/gostop/: __init__.py  account_sync.py  cli.py  collector.py  config.py  dashboard.py  eod_review.py  execution.py  kis_client.py  news.py  notify.py  runner.py  storage.py  strategy.py
src/gostop/dashboard_static/: app.js  index.html  styles.css
tests/: test_account_sync.py  test_runner.py  test_storage.py  test_strategy.py
