[project]
name = "gostop"
version = "0.1.0"
description = "KIS Open API quant data collector"
requires-python = ">=3.11"

[project.scripts]
gostop = "gostop.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gostop = ["dashboard_static/*.html", "dashboard_static/*.css", "dashboard_static/*.js"]
